# yag-template-lsp

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE.md  PLAN.md  README.md  rustfmt.toml  template-formatter-design.md  template-formatter-milestones.md
.github/workflows/: ci.yml  full-build.yml  new-funcs.yml  release.yml
bundled-defs/: README.md  THIRD_PARTY_LICENSES.md  builtin_funcs.ydef  context_funcs.ydef  ext_plugin_funcs.ydef  general_funcs.ydef  interaction_funcs.ydef
cmd/: gen-lytfs-diff.py  out.json  splitdefs.py
cmd/exportdefs/: Cargo.toml
cmd/exportdefs/src/: discord_md.rs  main.rs
cmd/yagfmt/: Cargo.toml
crates/syntax/: Cargo.toml
crates/yag-template-analysis/: Cargo.toml
crates/yag-template-analysis/src/: lib.rs
crates/yag-template-analysis/src/checks/: deprecated_funcs.rs  mod.rs  undefined_funcs.rs
crates/yag-template-analysis/src/scope/: analysis.rs  info.rs  mod.rs
crates/yag-template-analysis/src/typeck/: DESIGN.md  block.rs  context.rs  error.rs  flow.rs  func.rs  mod.rs  output.rs  ty.rs
crates/yag-template-analysis/src/typeck/check/: assoc_templates.rs  conditionals.rs  expr.rs  loops.rs  mod.rs  try_catch.rs
crates/yag-template-analysis/src/typeck/codegen/: funcs.rs  util.rs
crates/yag-template-analysis/src/typeck/ty/: display.rs  foreign.rs  mod.rs  ops.rs  relation.rs  union.rs
crates/yag-template-analysis/src/typeck/typedefs/: builtin_funcs.def  context_funcs.def  ext_plugin_funcs.def  general_funcs.def  mod.rs
crates/yag-template-analysis/src/typeck/typedefs/codegen/: funcs.rs  mod.rs  util.rs
crates/yag-template-envdefs/: Cargo.toml
crates/yag-template-format/: AGENTS.md  Cargo.toml
crates/yag-template-lsp/: Cargo.toml
crates/yag-template-lsp/src/: bundled_envdefs.rs  diagnostics.rs  main.rs  mapper.rs  server.rs  workspace.rs
crates/yag-template-lsp/src/provider/: completion.rs  diagnostics.rs  folding_range.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hint.rs  mod.rs  references.rs  rename.rs
crates/yag-template-lsp/src/session/: document.rs  mod.rs  sync.rs
crates/yag-template-syntax/: Cargo.toml
crates/yag-template-typedef/: Cargo.toml
crates/yag-template-typedefs/: Cargo.toml
def2json-bin/: Cargo.toml
def2json-bin/src/: discordmd.rs  main.rs
editors/vscode/: .eslintrc.js  .vscodeignore  README.md  THIRD_PARTY_LICENSES.md  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  yag-language-configuration.json  yag.tmLanguage.json  yagtemplate.tmLanguage.json  ydef-language-configuration.json  ydef.tmLanguage.json
exportdefs-bin/: Cargo.toml  mk_yagdata.py
exportdefs-bin/src/: discord_md.rs  discordmd.rs  main.rs
scripts/: gen-lytfs-diff.py
(+200 files in other folders)
