[package]
name = "exportdefs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exportdefs"
path = "src/main.rs"
doc = false
test = false

[dependencies]
yag-template-envdefs = { path = "../../crates/yag-template-envdefs" }
serde_json = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"
