[package]
name = "yag-template-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
slotmap = "1.0.7"
yag-template-syntax = { path = "../yag-template-syntax" }
smol_str = "0.2.2"

[dev-dependencies]
quote = "1.0"
prettyplease = "0.2.20"
syn = "2.0"
textwrap = "0.16.1"
itertools = "0.13.0"
proc-macro2 = "1.0"
