[package]
name = "yag-template-lsp"
version = "0.0.1"
edition = "2021"

[dependencies]
yag-template-syntax = { path = "../yag-template-syntax" }
yag-template-analysis = { path = "../yag-template-analysis" }
anyhow = "1.0.86"
dashmap = "5.5.3"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
