[package]
name = "yag-template-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
yag-template-syntax = { path = "../yag-template-syntax" }
yag-template-analysis = { path = "../yag-template-analysis" }
yag-template-envdefs = { path = "../yag-template-envdefs" }
anyhow = "1.0.86"
dashmap = "5.5.3"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rowan = "0.15.15"
