[package]
name = "yag-template-lsp"
version = "0.3.0"
edition = "2024"

[dependencies]
yag-template-syntax = { path = "../yag-template-syntax" }
yag-template-analysis = { path = "../yag-template-analysis" }
yag-template-envdefs = { path = "../yag-template-envdefs" }
yag-template-format = { path = "../yag-template-format" }
anyhow = "1.0.86"
dashmap = "5.5.3"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rowan = "0.15.15"
